--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <link rel="icon" href="https://demo.zmatjar.com/files/zmatjar-logo.jpg" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <title>ZMatjar</title>
+    <style>:root
+			{
+				--color-on-primary: #FFFFFF !important;
+				--color-on-primary-hover: #FFFFFF !important;
+				--color-primary: #b11f23
+				!important;
+				--color-primary-dark: #da1e2d !important;
+				--color-primary-hover: #b11825 !important;
+				--color-primary-light: #b11f2345
+				!important;
+				--color-brand-primary: #b11f23
+				!important;
+				--color-brand-secondary: #c41b29 !important;
+				--color-brand-tertiary: #a68083 !important;
+				--color-text-text: #FFFFFF !important;
+				--color-bg: #f5f5f5;
+				--color-black: #000;
+				--color-white: #fff;
+				--color-grey: #707070;
+				--color-danger: #f44336;
+				--color-danger-dark: #dc3c31;
+				--color-danger-light: #fef4f3;
+				--color-warning: #f29b38;
+				--color-success: #00d2a3;
+				--color-brand-text: #fff;
+				--color-chatfood: #1258ff;
+				--color-coral: #eb5757;
+				--color-salmon: #fef7f7;
+				--color-canary: #f6b722;
+				--color-lemon-sorbet: #fffaed;
+				--color-mint: #27ae60;
+				--color-pistachio: #e2f9ec;
+				--color-charcoal: #050505;
+				--color-midnight: #071c4d;
+				--color-atlantic: #13285f;
+				--color-stormy: #4b5b82;
+				--color-rainy: #838da6;
+				--color-cloudy: #ebeff4;
+				--color-powder: #f4f6f9;
+				--color-pure-white: #fff;
+				--color-hover: var(--color-brand-secondary);
+				--color-secondary: var(--color-base-80);
+				--color-on-secondary: var(--color-base-20);
+				--color-base-10: #050505;
+				--color-base-20: #333;
+				--color-base-30: #4d4d4d;
+				--color-base-40: #666;
+				--color-base-50: grey;
+				--color-base-60: #999;
+				--color-base-70: #b2b2b2;
+				--color-base-80: #ccc;
+				--color-base-90: #e5e5e5;
+				--color-base-95: #f2f2f2;
+				--color-base-100: #fff;
+			}
+		</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
