--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,12 @@
 				--color-base-100: #fff;
 			}
 		</style>
+		
   </head>
   <body>
+	<div id="style"></div>
     <div id="root"></div>
+	
   </body>
+  
 </html>
