--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="MobileOptimized" content="width" />
@@ -72,10 +72,8 @@
 		</style>
 		
   </head>
-  <body>
-	<div id="style"></div>
+  <body dir="ltr">
     <div id="root"></div>
-	
   </body>
   
 </html>
