--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ZMatjar</title>
+    <title></title>
     <style>:root
 			{
 				--color-on-primary: #FFFFFF !important;
